Add logrocket browser destination (#835)
* initial destination config
- initialize sdk when loaded
- [WIP] add track action

* WIP testing update
* init cleanup
* attempting to test initialize function

* clean up lint flags

* dd tests for track call

* add support for identify calls

* add identify tests

* cleanup initialize fn and tests

* cleanup types

* move test utilities into root

* add types to test mocks

--- a/packages/browser-destinations/package.json
+++ b/packages/browser-destinations/package.json
@@ -38,6 +38,7 @@
     "@segment/analytics-next": "^1.29.3",
     "@segment/destination-subscriptions": "^3.12.0",
     "dayjs": "^1.10.7",
+    "logrocket": "^3.0.1",
     "tslib": "^2.3.1",
     "vm-browserify": "^1.1.2"
   },
